# langchain-google-memorystore-redis-python

./: .coveragerc  .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  pyproject.toml  requirements-3.8.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  header-checker-lint.yml  renovate.json5  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  conf.py  document_loader.ipynb  index.rst  vector_store.ipynb
docs/langchain_google_memorystore_redis/: history.rst  loader.rst  vectorstore.rst
samples/: langchain_quick_start.ipynb
src/langchain_google_memorystore_redis/: __init__.py  chat_message_history.py  doc_saver.py  document_loader.py  document_saver.py  loader.py  redis_chat_message_history.py  saver.py  vector_store.py  vectorstore.py
tests/: test_chat_message_history.py  test_doc_loader.py  test_doc_saver.py  test_document_loader.py  test_document_saver.py  test_memorystore_redis_chat_message_history.py  test_memorystore_redis_loader.py  test_memorystore_redis_saver.py  test_memorystore_redis_vectorstore.py  test_vector_store.py
