[project]
name = "langchain-google-memorystore-redis"
version = "0.0.1"
description = "LangChain integrations for Google Cloud Memorystore"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "langchain==0.1.1",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-memorystore-redis-python"
Repository = "https://github.com/googleapis/langchain-google-memorystore-redis-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-memorystore-redis-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-memorystore-redis-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black==23.12.0",
    "black[jupyter]==23.12.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pytest-asyncio==0.23.0",
    "pytest==7.4.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
