[project]
name = "langchain-google-memorystore-redis"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Memorystore"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.1, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "redis>=5.0.0, <6.0.0",
    "numpy>=1.24.4, <2.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_memorystore_redis.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-memorystore-redis-python"
Repository = "https://github.com/googleapis/langchain-google-memorystore-redis-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-memorystore-redis-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-memorystore-redis-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.1",
    "pytest-asyncio==0.23.8",
    "pytest==8.3.2",
    "pytest-cov==6.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
